 * $Id: ChangeLog,v 1.4121 2005/05/16 14:29:14 bdj Exp $

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-05-16 13:18 UTC-0800 Tony Bretado <jabrecer@yahoo.com>
  * include/ctwin.ch
    ! Re-Activation of commands CTWINON and CTWINOFF
    + Added suport for colorwin
  * source/ct/alt/ctwin.prg


2005-05-16 21:25 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/wvtgui/hbgtwvt.h
    ! missing function declaration hb_wvt_gtSetLastMenuEvent()
  * source/rtl/gtwvt.h
    ! typo: hb_wvw_gtSetLastMenuEvent() --> hb_wvt_gtSetLastMenuEvent()
  * ChangeLog
    ! minor typo in my last change entry

2005-05-15 15:14 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbexprb.c
  * source/compiler/exproptb.c
    * Fixed generation of M[EMVAR]->SemeVar[...] := ...
  * source/compiler/harbour.sly
    * Fixed GPF trap typo.

2005-05-15 11:11 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbexprb.c
  * source/compiler/exproptb.c
    * Missing declaration of hb_compFieldGetPos()

2005-05-14 18:40 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbexprb.c
  * source/compiler/exproptb.c
    * Fixed generation for pusing <declared>[...] when <declared> is a FIELD.

   /*
      To fix pop operation we'll need to add support for HB_P_PUSHFIELDREF
      Przemek, can you add proper support in RDD so we can implement it?
    */

2005-05-14 11:50 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hvm.c
    ! Fixed background tasks logic to prserve value of HB_VM_STACK.Return

2005-05-13 1:26 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
   * source/rtl/transfrm.c
     ! Fixed bug in handling @( and @) pictures in combination with $.
       All credits to the fix go to Andi Jahja (I'm just commiting on his behalf)
     ? Transform( -5, "@(Z $###,##9.99" )
     ? Transform( -10, "@)Z $###,##9.99" )